# PIMProf

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  Makefile.common  Makefile.config  MyPinTool.cpp  README.md  defaultconfig.ini  makefile  makefile.rules  makefile.vars  run.sh  test.cpp
AnnotatorInjection/: AnnotatorGeneration.cpp  AnnotatorInjection.cpp  Common.h
BBLPass/: BBLPass.cpp  CMakeLists.txt
Configs/: accelconfig.ini  defaultconfig.ini  defaultconfig_128.ini  defaultconfig_16.ini  defaultconfig_16_withavx.ini  defaultconfig_1_bc.ini  defaultconfig_1_bfs.ini  defaultconfig_1_cc.ini  defaultconfig_1_pr.ini  defaultconfig_1_sssp.ini  defaultconfig_1_tc.ini  defaultconfig_32.ini  defaultconfig_32_bc.ini  defaultconfig_32_bfs.ini  defaultconfig_32_cc.ini  defaultconfig_32_pr.ini  defaultconfig_32_sssp.ini  defaultconfig_32_tc.ini  defaultconfig_32_withavx.ini  defaultconfig_64.ini  defaultconfig_8.ini  defaultconfig_8_withavx.ini  drisaconfig.ini  drisaconfig2.ini  drisaconfig_16384.ini  drisaconfig_32768.ini  drisaconfig_4096.ini  drisaconfig_8192.ini  floatpimconfig.ini  floatpimconfig_131072.ini  floatpimconfig_32768.ini  floatpimconfig_65536.ini
LLVMAnalysis/: AnnotationGeneration.cpp  AnnotationInjection.cpp  AnnotatorGeneration.cpp  AnnotatorInjection.cpp  CFGDump.cpp  CFGDump.h  CMakeLists.txt  Common.h  InjectMagic.h  OffloaderInjection.cpp  PIMProfAnnotation.cpp  PIMProfAnnotation.h  PIMProfOffloader.cpp  PIMProfSniperHooks.h  PIMProfTimer.cpp  PIMProfZSimHooks.cpp  PIMProfZSimHooks.h  zsimhooks.h
LLVMInjection/: AnnotatorGeneration.cpp  CMakeLists.txt  Common.h  LLVMInjection.cpp  PIMProfAnnotator.cpp
MemoryIntensive/: armtest_matrix.cpp  makefile
PIMProfSolver/: CMakeLists.txt  Common.h  CostPackage.cpp  CostPackage.h  CostSolver.cpp  CostSolver.h  DataReuse.h  INIReader.h  PinInstrument.cpp  PinInstrument.h  PinUtil.cpp  PinUtil.h  README.md  Simulation.h  Stats.h  Storage.cpp  Storage.h  Util.cpp  Util.h  main.cpp
PinInstrument/: CMakeLists.txt  Cache.cpp  Cache.h  CostPackage.cpp  CostPackage.h  CostSolver.cpp  CostSolver.h  DataReuse.cpp  DataReuse.h  InstructionLatency.cpp  InstructionLatency.h  Makefile  MemoryLatency.cpp  PinInstrument.cpp  PinInstrument.h  PinInstrument2.cpp  PinInstrument_old.cpp  PinUtil.cpp  PinUtil.h  PrintConfigTemplate.cpp  README.md  Simulation.cpp  Simulation.h  Storage.cpp  Storage.h  defaultcache.ini  defaultconfig.ini  defaultcost.ini  defaultinstructionlatency.ini  defaultlatency.ini  main.cpp  makefile.rules
PinInstrument_old/: Cache.cpp  CostSolver.cpp  CostSolver.h  DataReuse.h  InstructionLatency.cpp  InstructionLatency.h  MemoryLatency.cpp  MemoryLatency.h  PinInstrument.cpp  PinInstrument.h  PinUtil.h  PrintConfigTemplate.cpp  README.md  main.cpp  makefile.rules
TestCase/: makefile  run.sh  template.ini  test.bc  test.cpp
test/: Makefile  print4.cpp  pthreads.c  pthreads.cpp  test.cpp  test.py
util/: cfgheatmap.py  csvdecision.py
